--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -39,7 +39,7 @@ Load outputs from EDA Rmds
 load("data/WorldSustainabilityData_Processed.Rda")
 #skim(wsd)
 max(wsd$Year)
-wsd <- wsd %>% dplyr::select(1:3,"Continent",4:21,23:ncol(wsd)) %>% # rearrange a little to group continent with the other geographic data
+wsd <- wsd %>% dplyr::select(1:3,"Continent", "WorldRegion", 4:21,23:31) %>% # rearrange a little to group continent & World Region with the other geographic data
   mutate(Country.Name=as.factor(Country.Name)) %>%
   rename(country=Country.Name)
 
@@ -66,8 +66,8 @@ To start, I'll make a wide df the WSD data into the COVID dataset containing: th
 
 ``` {r}
 # 2018 values
-wsd.2018 <- wsd %>% subset(Year==max(wsd$Year)) %>% select(-Year) #filter to last year of WSD data
-colnames(wsd.2018)[4:30] <- paste(colnames(wsd.2018)[4:30], "2018", sep = "_") #add suffix
+wsd.2018 <- wsd %>% subset(Year==max(wsd$Year)) %>% dplyr::select(-Year) #filter to last year of WSD data
+colnames(wsd.2018)[5:30] <- paste(colnames(wsd.2018)[5:30], "2018", sep = "_") #add suffix
 head(wsd.2018)
 n_unique(wsd.2018$country) 
 ```
@@ -108,16 +108,15 @@ wsd.3yr.fac <- wsd %>% arrange(Year) %>%
   filter(n() == 3) %>%
   mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
          RegimeType = Mode(RegimeType),
-         WorldRegion=Mode(WorldRegion),
          nYears=n()) %>% #count how many years are being averaged for each country) %>%
   ungroup() %>%
-  select(country, nYears, WorldBankIncomeClass, RegimeType, WorldRegion) %>%
+  dplyr::select(country, WorldRegion, nYears, WorldBankIncomeClass, RegimeType) %>%
   distinct()
 #n_unique(wsd.3yr.fac$country) #make sure no countries missing
-colnames(wsd.3yr.fac)[2:5] <- paste(colnames(wsd.3yr.fac)[2:5], "3yr", sep = "_") #add suffix
+colnames(wsd.3yr.fac)[3:5] <- paste(colnames(wsd.3yr.fac)[3:5], "3yr", sep = "_") #add suffix
 
 wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") %>% #rejoin num and fac
-    select(-Year_3yr, -nYears_3yr)
+    dplyr::select(-Year_3yr, -nYears_3yr)
 nrow(wsd.3yr)
 ```
 Averaging across all years for every country with available data. 
@@ -128,7 +127,7 @@ wsd.avg.num <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
   summarise_if(is.numeric, mean) %>%
   ungroup() %>%
-  select(-Year)
+  dplyr::select(-Year)
 colnames(wsd.avg.num)[2:25] <- paste(colnames(wsd.avg.num)[2:25], "avg", sep = "_") #add suffix
 
 # mode for factors
@@ -136,12 +135,11 @@ wsd.avg.fac <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
   mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
          RegimeType = Mode(RegimeType),
-         WorldRegion=Mode(WorldRegion),
          nYears=n()) %>% #count how many years are being averaged for each country
   ungroup() %>%
-  select(country, WorldBankIncomeClass, RegimeType, WorldRegion, nYears) %>%
+  dplyr::select(country, WorldRegion, WorldBankIncomeClass, RegimeType, nYears) %>%
   distinct()
-colnames(wsd.avg.fac)[2:5] <- paste(colnames(wsd.avg.fac)[2:5], "avg", sep = "_") #add suffix
+colnames(wsd.avg.fac)[3:5] <- paste(colnames(wsd.avg.fac)[3:5], "avg", sep = "_") #add suffix
 
 # #make sure modes returned as expected 
 # angola <- wsd$WorldBankIncomeClass[wsd$country=="Angola"]
@@ -181,13 +179,13 @@ wsd.change.num <- wsd %>%
   mutate(across(where(is.numeric), ~rel.diff(.), .names="{.col}_rel.diff")) %>% # change normalized by baseline values
   mutate(across(c(!ends_with("diff")), ~diff(.x), .names="{.col}_diff"))  %>%  #absolute change 
   mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
-  select(-Year, -Year_diff, -Year_rel.diff) %>%
+  dplyr::select(-Year, -Year_diff, -Year_rel.diff) %>%
   drop_na() %>%
   ungroup()
 
 #now factors
 wsd.change.fac <- wsd %>%
-  select(country, Year, WorldBankIncomeClass, RegimeType)
+  dplyr::select(country, Year, WorldBankIncomeClass, RegimeType)
 # order factors
 wsd.change.fac$WorldBankIncomeClass <- factor(wsd.change.fac$WorldBankIncomeClass, levels=c("Low income", "Lower-middle income", "Upper-middle income", "High income"), ordered=TRUE)
 wsd.change.fac$RegimeType <- factor(wsd.change.fac$RegimeType, levels=c("Closed Autocracy", "Electoral Autocracy", "Electoral Democracy", "Liberal Democracy"), ordered=TRUE)
@@ -202,13 +200,13 @@ wsd.change.fac <- wsd.change.fac %>%
          RegimeType_diff = unclass(RegimeType) - unclass(lag(RegimeType)),
          RegimeType_rel.diff = rel.diff(unclass(RegimeType))) %>% 
   mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
-  select(-Year) %>%
+  dplyr::select(-Year) %>%
   drop_na() %>%
   ungroup()
 
 #now join and drop unnecessary columns used for calculations
 wsd.change <- merge(wsd.change.num, wsd.change.fac, by ="country") %>%
-  select(country, ends_with("diff"))
+  dplyr::select(country, ends_with("diff"))
 ```
 
 Merge into one wide wsd dataframe:
@@ -216,12 +214,13 @@ Merge into one wide wsd dataframe:
 ```{r}
 # one predictor dataframe to rule them all
 wsd.df_list <- list(wsd.2018, wsd.3yr, wsd.avg, wsd.change) #dfs to merge
-wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country') #join
+wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country') %>%
+  dplyr::select(-c(WorldRegion.x, WorldRegion.y))#join
 #skim(wsd.sum.wide)
 
 #here's a long version if you want it
 wsd.sum.long <- wsd.sum.wide %>%
-  select(-WorldBankIncomeClass_rel.diff, -RegimeType_rel.diff) %>%
+  dplyr::select(-WorldBankIncomeClass_rel.diff, -RegimeType_rel.diff) %>%
   mutate(WorldBankIncomeClass_diff=as.factor(WorldBankIncomeClass_diff),
          RegimeType_diff=as.factor(RegimeType_diff)) %>%
   pivot_longer(c(contains("_")), 
@@ -263,7 +262,7 @@ vac_info_2022 <- covid %>%
   filter(date == max(date)) %>%   # keep last reported date for every country
   filter(year == 2022) %>% # keep only countries who last reported in 2022 (as we are interested in a recent vaccination status)
   # filter(month_year == "2022-03-01") # could also filter for march 2022 specifically
-  select(country, date, missing_vac_cols) %>% # keep only variables not yet included in last.timepoint
+  dplyr::select(country, date, missing_vac_cols) %>% # keep only variables not yet included in last.timepoint
   rename(date.vac = date)# rename the date to correspond to last reported vaccine info
 
 # merge the last reported vaccination info with last reported cases/deaths info
@@ -282,19 +281,19 @@ Vaccine outcomes:
 ```{r}
 # creating dfs of vaccination events - much of this is from covid_EDA.Rmd and can be removed/cleaned up once Rmds are merged!
 vac_start_df <- covid %>%
-  select(country, date, vaccination_events) %>%
+  dplyr::select(country, date, vaccination_events) %>%
   filter(vaccination_events == "vac_start") %>%
   mutate(days.to.start_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.start_abs = as.numeric(difftime(date, "2020-12-01", units = "days"))) %>%
   rename(date.first.vac = date)
 
 # adding date of first vaccination for each country to the covid df so it can be used as a baseline later -
-vac_start_date <- vac_start_df %>% select(country, date.first.vac)
+vac_start_date <- vac_start_df %>% dplyr::select(country, date.first.vac)
 covid <- full_join(covid, vac_start_date, by ="country")
 
 #days until country admins 1 dose per person
 vac_1_dose <- covid %>%
-  select(country, date, vaccine_dose_events, date.first.vac) %>% #
+  dplyr::select(country, date, vaccine_dose_events, date.first.vac) %>% #
   filter(vaccine_dose_events == "1_dose")%>%
   mutate(days.to.1d_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.1d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")), # setting Dec 1, 2020 as vaccine baseline to compare across vaccine events
@@ -304,7 +303,7 @@ vac_1_dose[which.min(vac_1_dose$date),] #first country to get one dose per perso
 
 #days until country admins 2 doses per person
 vac_2_doses <- covid %>%
-  select(country, date, vaccine_dose_events, date.first.vac) %>%
+  dplyr::select(country, date, vaccine_dose_events, date.first.vac) %>%
   filter(vaccine_dose_events == "2_doses")%>%
   mutate(days.to.2d_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.2d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
@@ -314,7 +313,7 @@ vac_2_doses[which.min(vac_2_doses$date),] #first country to hit 2 doses
 
 #days until country reports vaccinating 10% of pop
 vac_10_df <- covid %>%
-  select(country, date, vaccination_events, date.first.vac) %>%
+  dplyr::select(country, date, vaccination_events, date.first.vac) %>%
   filter(vaccination_events == "vac_10pct") %>%
   mutate(days.to.10pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.10pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
@@ -324,7 +323,7 @@ nrow(vac_10_df)
 
 #days until country reports vaccinating 20% of pop
 vac_20_df <- covid %>%
-  select(country, date, vaccination_events, date.first.vac) %>%
+  dplyr::select(country, date, vaccination_events, date.first.vac) %>%
   filter(vaccination_events == "vac_20pct") %>%
   mutate(days.to.20pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.20pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
@@ -334,7 +333,7 @@ nrow(vac_20_df)
 
 #days until country reports vaccinating 30% of pop
 vac_30_df <- covid %>%
-  select(country, date, vaccination_events, date.first.vac) %>%
+  dplyr::select(country, date, vaccination_events, date.first.vac) %>%
   filter(vaccination_events == "vac_30pct") %>%
   mutate(days.to.30pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.30pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
@@ -345,7 +344,7 @@ n_unique(vac_30_df$country)
 
 #days until country reports vaccinating 50% of pop
 vac_50_df <- covid %>%
-  select(country, date, vaccination_events, date.first.vac) %>%
+  dplyr::select(country, date, vaccination_events, date.first.vac) %>%
   filter(vaccination_events == "vac_50pct") %>%
   mutate(days.to.50pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.50pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
@@ -354,7 +353,7 @@ vac_50_df <- covid %>%
 
 # #percent of ppl w/ 1 dose of vaccine as of mar 17 2022 - redundant to last.timepoint
 # binned_vac <- covid %>%
-#   select(country, date, binned_people_vaccinated_per_hundred) %>%
+#   dplyr::select(country, date, binned_people_vaccinated_per_hundred) %>%
 #   drop_na(binned_people_vaccinated_per_hundred) %>%
 #   group_by(country) %>%
 #   arrange(date) %>%
@@ -367,7 +366,7 @@ vac_50_df <- covid %>%
 
 # mean daily rate of vaccinations per million ppl in first 6 months of each country's administration
 vac_rate <- covid %>%
-  select(country, date, daily_vaccinations_per_million, date.first.vac) %>% 
+  dplyr::select(country, date, daily_vaccinations_per_million, date.first.vac) %>% 
   filter(daily_vaccinations_per_million > 0,
          date <= (date.first.vac %m+% months(6))) %>% # daily vaccinations in 1st 6 mo - make relative to their own vaccine start date
   drop_na(daily_vaccinations_per_million) %>% 
@@ -376,7 +375,7 @@ vac_rate <- covid %>%
 
 # max rate of vaccinations administration
 vac_maxrate <- covid %>%
-  select(country, date, daily_vaccinations_per_million, daily_vaccinations_raw, daily_vaccinations) %>% 
+  dplyr::select(country, date, daily_vaccinations_per_million, daily_vaccinations_raw, daily_vaccinations) %>% 
   group_by(country) %>%
   mutate_if(is.numeric, ~replace(., is.na(.), -1)) %>% #temporarily replace na's with -1
   summarise_if(is.numeric, max) %>%
@@ -395,26 +394,26 @@ covid_prevac <- covid %>%
   arrange(country,date) %>%
   slice_tail(n=1) %>%
   ungroup() %>%
-  select("country"| contains("case") | contains("death"))
+  dplyr::select("country"| contains("case") | contains("death"))
 colnames(covid_prevac)[2:19] <- paste(colnames(covid_prevac)[2:19], "prevac", sep = "_") #add suffix
 
 
-# cases & deaths at 1 yr after date.first.vac
-covid_1yr <- covid %>%
-  group_by(country) %>%
-  drop_na(date.first.vac) %>%
-  subset(date == (date.first.vac %m+% months(12))) %>%
-  select("country"| contains("case") | contains("death"))
-colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") #add suffix
-#covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
-#sum(is.na(covid_1yr$cumulative_total_cases))
+# # cases & deaths at 1 yr after date.first.vac
+# covid_1yr <- covid %>%
+#   group_by(country) %>%
+#   drop_na(date.first.vac) %>%
+#   subset(date == (date.first.vac %m+% months(12))) %>%
+#   dplyr::select("country"| contains("case") | contains("death"))
+# colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") #add suffix
+# #covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
+# #sum(is.na(covid_1yr$cumulative_total_cases))
 
 #peak rates up until vaccinations start
 covid_maxrate <- covid %>%
   drop_na(date.first.vac) %>%
   subset(date < date.first.vac) %>% 
-  select("country" | contains(c("new", "daily"))) %>%
-  select(-contains("vac")) %>% #drop vac cols
+  dplyr::select("country" | contains(c("new", "daily"))) %>%
+  dplyr::select(-contains("vac")) %>% #drop vac cols
   group_by(country) %>%
   mutate_if(is.numeric, ~replace(., is.na(.), -1)) %>% #temporarily replace na's with -1
   summarise_if(is.numeric, max) %>%
@@ -437,21 +436,21 @@ First we'll dump all the vaccine-related stuff into one big dataframe here:
 
 ``` {r}
 #big df for vaccine info
-last.vac <- last.timepoint %>% select("country"| contains("vacc"))#get just vaccine stuff from  last.timepoint
+last.vac <- last.timepoint %>% dplyr::select("country"| contains("vacc"))#get just vaccine stuff from  last.timepoint
 vac.df_list <- list(vac_1_dose, vac_2_doses, vac_start_df, vac_10_df, vac_20_df, vac_30_df, vac_50_df, vac_rate, vac_maxrate, last.vac)
 #drop date and event info since this is contained in col names
 for (i in 1:length(vac.df_list)) {
-  vac.df_list[[i]] <- vac.df_list[[i]] %>% select(-c(contains("date") | contains("events")))
+  vac.df_list[[i]] <- vac.df_list[[i]] %>% dplyr::select(-c(contains("date") | contains("events")))
 }
 
 vac.dump <- vac.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
-skim(vac.dump)
+#skim(vac.dump)
 ```
 
 Now we'll pair it down to keep only key variables that aren't redundant/highly correlated to run PCA on. NOTE: feel free to update/make changes to what's been kept!
 
 ```{r}
-vac.sum <- vac.dump %>% select(
+vac.sum <- vac.dump %>% dplyr::select(
   country, 
   days.to.start_rel, #days until a country reports starting to administer vaccines, with the 1st country to start vaccinating as a baseline
   days.to.10pct_fromstart, #days between starting vaccinations and administering to 10% of pop
@@ -468,10 +467,10 @@ Merging case & death dfs
 
 ```{r}
 #df for cases and deaths
-last.case <- last.timepoint %>% select("country", "date_last" | contains("case") | contains("death")) #get just cases & deaths stuff from  last.timepoint
-case.df_list <- list(covid_prevac, covid_1yr, covid_maxrate, last.case)
+last.case <- last.timepoint %>% dplyr::select("country", "date_last" | contains("case") | contains("death")) #get just cases & deaths stuff from  last.timepoint
+case.df_list <- list(covid_prevac, covid_maxrate, last.case) #covid_1yr
 case.sum.wide <- case.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
-skim(case.sum.wide)
+#skim(case.sum.wide)
 ```
 
 Merge all COVID summary data
@@ -480,18 +479,22 @@ Merge all COVID summary data
 covid.df_list <- list(case.sum.wide, vac.dump)
 covid.all <- covid.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
 n_unique(covid.all$country)
-skim(covid.all)
+#skim(covid.all)
 ```
 
 
 ## Merge! Merge! Merge!
 
 ``` {r}
+#merging ALL WSD predictors with cases, deaths & maxrate data for big, data-driven models!
+case.wsd.wide <- inner_join(case.sum.wide, wsd.sum.wide, by="country")
+#skim(case.wsd.wide)
+
 #merging WSD predictors with vaccination summary data
 vac.wsd.wide <- inner_join(vac.dump, wsd.sum.wide, by="country")
 #skim(vac.wsd.wide)
 
-#merging WSD predictors with cases, deaths & maxrate data
+#merging ALL WSD predictors with cases, deaths & maxrate data for big, data-driven models!
 case.wsd.wide <- inner_join(case.sum.wide, wsd.sum.wide, by="country")
 #skim(case.wsd.wide)
 
@@ -501,7 +504,7 @@ mar22.wsd.wide <- inner_join(last.timepoint, wsd.sum.wide, by="country")
 
 #merging everything!
 wsd.covid.all <- inner_join(covid.all, wsd.sum.wide, by="country")
-skim(wsd.covid.all)
+#skim(wsd.covid.all)
 ```
 
 Any of the above can be recombined/merged further or pivoted long.
@@ -512,17 +515,76 @@ days from vaccine access to 50% ppl
 % ppl vaccinated at march 2022 (absolute counts and binned)
 doses administered at march 2022 (absolute counts and binned)
 
+## Computing Vaccination Status Index
+
+**add Joelle's PCA here**
 
 ## Modeling
-Predicting inverse signed PC1 scores (from `data/VaccinationSucessIndexData-New.csv`) using `case.wsd.wide`.
+
+Predicting VSI scores (from `data/VaccinationSucessIndexData-New.csv`) using `case.wsd.wide`, which includes all WSD summary outputs and COVID case/death info up until vaccination started in each country.
 
 ```{r}
 #read in
 new.data.with.VSI <- read.csv("data/VaccinationSucessIndexData-New.csv")
-names(new.data.with.VSI)
 
-#wsd.covid.all
+#adding in PC1
+yval <- new.data.with.VSI %>% dplyr::select("country", "VSI")
+df <- inner_join(case.wsd.wide, yval,  by=("country"))
+#names(df)
+n_unique(df$country)
+```
 
+
+Subdividing our dataset of 108 countries into `data.train`(60%), `data.test` (20%), and `data.val` (20%) 
+
+```{r}
+# Split the data 
+N <- length(df$country)
+n1 <- floor(.6*N)
+n2 <- floor(.2*N)
+
+#dropping country, continent and country.code 
+df.pred <- df %>% dplyr::select(-c(country, Continent, Country.Code))
+  
+set.seed(10)
+
+# Split data to three portions of .6, .2 and .2 of data size N
+idx_train <- sample(N, n1)
+idx_no_train <- (which(! seq(1:N) %in% idx_train))
+idx_test <- sample(idx_no_train, n2)
+idx_val <- which(! idx_no_train %in% idx_test)
+data.train <- as.data.frame(df.pred[idx_train,])
+data.test <- as.data.frame(df.pred[idx_test,])
+data.val <- as.data.frame(df.pred[idx_val,])
+data.train.test <- as.data.frame(df.pred[-idx_val,]) #for methods that don't require separate test set
+``` 
+
+Here's code to subdivide the train/test dfs based on what type of WSD predictors they include (i.e. so you can easily train a model only on the WSD 17-yr averages, plus static measures and covid cases/deaths). We should also pair down on the covid case/death variables in here!
+
+```{r}
+# WSD 2018
+data.train_2018 <- data.train %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.test_2018 <- data.test %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.val_2018 <- data.val %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.train.test_2018 <- data.train.test %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+
+# 3 year average
+data.train_3yr <- data.train %>% dplyr::select(-c(contains("_2018") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.test_3yr <- data.test %>% dplyr::select(-c(contains("_2018") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.val_3yr <- data.val %>% dplyr::select(-c(contains("_2018") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+data.train.test_3yr <- data.train.test %>% dplyr::select(-c(contains("_2018") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
+
+# 17 year average
+data.train_avg <- data.train %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_rel.diff") | contains("_diff")))
+data.test_avg <- data.test %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_rel.diff") | contains("_diff")))
+data.val_avg <- data.val %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_rel.diff") | contains("_diff")))
+data.train.test_avg <- data.train.test %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_rel.diff") | contains("_diff")))
+
+#17 year change
+data.train_diff <- data.train %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
+data.test_diff <- data.test %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
+data.val_diff <- data.val %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
+data.train.test_diff <- data.train.test %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
 ```
 
 
